småfix... mypage etc

--- a/KickAss2/src/KickAss2/Views/Home/MyPage.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/MyPage.cshtml
@@ -20,7 +20,7 @@
 
     <div id="verticalLines" class="col-sm-4">
         <h4 style="text-align: left; font-weight: bold">Orderhistorik</h4>
-        <table>
+        <table style="width: 100%">
             <tr>
                 <th style="text-align: left">Orderdatum</th>
                 <th style="text-align: left">Order ID</th>
@@ -43,4 +43,3 @@
         <p style="text-align: left"><a href="#categoriIdPennor">Pennor</a> - Köp 3 paket betala för 2</p>
     </div>
 </div>
-
