--- a/KickAss2/src/KickAss2/Views/Shared/LogInNavBar.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/LogInNavBar.cshtml
@@ -2,7 +2,7 @@
 
     @if (Model != null)
     {
-    <li><a href="/home/MyPages"><span class="glyphicon glyphicon-user"></span> Mina Sidor</a></li>
+    <li><a href="/home/MyPage"><span class="glyphicon glyphicon-user"></span> Mina Sidor</a></li>
     <form asp-controller="Home" asp-action="LogOut"><li><a href="/home/logout"><span class="glyphicon glyphicon-log-in"></span> Logga ut</a></li></form>
     }
     else
