--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
         Logged In as @Model.UserName
     </div>
 }
-
+<div> @Html.Partial("LogInNavBar")</div>
 <script>
     //$(document).ready(function () {
     //    //called when key is pressed in textbox
