--- a/KickAss2/src/KickAss2/Views/Order/ShoppingCart.cshtml
+++ b/KickAss2/src/KickAss2/Views/Order/ShoppingCart.cshtml
@@ -1,39 +1,59 @@
-﻿<link href="~/css/kickass.css" rel="stylesheet" />
+﻿@model ShoppingCartVM
+<div> @Html.Partial("LogInNavBar",Model.CurrentUser)</div>
+@if (Model.ShoppingList != null)
+{
+    <link href="~/css/kickass.css" rel="stylesheet" />
 
-<div id="row1" class="row" style="padding: 5px" ; text-align center>
-    <div class="col-sm-12">
-        <h1 style="text-align: center; font-weight: bold"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorgen</h1>
-        <br />
-        <p>Nedan visas alla produkter i din varukorg</p>
-        <hr />
+    <div id="row1" class="row" style="padding: 5px" ; text-align center>
+        <div class="col-sm-12">
+            <h1 style="text-align: center; font-weight: bold"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorgen</h1>
+            <br />
+            <p>Nedan visas alla produkter i din varukorg</p>
+            <hr />
+        </div>
     </div>
-</div>
-<div id="row2" class="row" style="padding: 5px; text-align: center">
-    <div class="col-sm-4">
-        <h4 style="text-align: left; font-weight: bold">Kuvert, 29 kr/st</h4>
-        <p style="text-align: left"><a href="#paymentDetails">50 stycken C5 kuvert</a></p>
-        <p style="text-align: left"><b>Antal: </b> 3 st</p>
-        <p style="text-align: left"><b>Kostnad: </b> 87 st</p>
-    </div>
-    <div class="col-sm-4" id="verticalLines">
-        <h4 style="text-align: left; font-weight: bold">Almanacka, 39 kr/st</h4>
-        <p style="text-align: left"><a href="#paymentDetails">En stilig almanack i A5 format</a></p>
-        <p style="text-align: left"><b>Antal: </b> 1 st</p>
-        <p style="text-align: left"><b>Kostnad: </b> 39 st</p>
-    </div>
-    <div class="col-sm-4">
-        <h4 style="text-align: left; font-weight: bold">Pennor, 199 kr/st</h4>
-        <p style="text-align: left"><a href="#paymentDetails">Två stycken must have Kickass pennor</a></p>
-        <p style="text-align: left"><b>Antal: </b> 1 st</p>
-        <p style="text-align: left"><b>Kostnad: </b> 199 st</p>
-    </div>
-</div>
-<hr />
 
-<div id="row1" class="row" style="padding: 5px" ; text-align center>
-    <div class="col-sm-12">
-        <h1 style="text-align: center; font-weight: bold"><span class="glyphicon glyphicon-shopping-cart"></span> Totalt: 500 kr</h1>
-        <br />
-        <hr />
+
+    @foreach (var item in Model.ShoppingList)
+    {
+        <div id="row2" class="row" style="padding: 5px; text-align: center">
+            <h4 style="text-align: left; font-weight: bold">@item.ProductInCart.Name</h4>
+
+            <p style="text-align: left"><b>@item.ProductInCart.Price</b></p>
+            <p style="text-align: left"><b>@item.Quantity</b></p>
+
+
+        </div>
+    }
+
+
+
+    <hr />
+
+    <div id="row1" class="row" style="padding: 5px" ; text-align center>
+        <div class="col-sm-12">
+            <h1 style="text-align: center; font-weight: bold"><span class="glyphicon glyphicon-shopping-cart"></span> Totalt: 500 kr</h1>
+            <br />
+            <hr />
+        </div>
     </div>
-</div>
+
+
+}
+else
+{
+    <div id="row1" class="row" style="padding: 5px" ; text-align center>
+        <div class="col-sm-12">
+            <h1 style="text-align: center; font-weight: bold"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorgen</h1>
+            <br />
+            <p>Nedan visas alla produkter i din varukorg</p>
+            <hr />
+        </div>
+    </div>
+    <div>Din VaruKorg är Tom!</div>
+
+}
+
+
+
+
