--- a/KickAss2/src/KickAss2/Views/Products/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Products/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using KickAss2.ViewModels
 @model List<ListProductVM>
 
+<div> @Html.Partial("LogInNavBar",Model.First().CurrentUser)</div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-2"><label>Produktnam</label></div>
