--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    @model Tuple<LogInUserVM, CurrentUserVM>
+    @*@model Tuple<LogInUserVM, CurrentUserVM>*@
 
     @*@model SessionVM*@
 
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-sm-9" style="text-align: center;">
                     <p class="hidden-xs" style="color: transparent;">.</p>
-                    @if (Model != null && Model.Item2 != null)
+                    @*@if (Model != null && Model.Item2 != null)
                     {
                         <p class="hidden-xs" id="1345" style="font-family: Candara; font-style: oblique; color: forestgreen; font-size: 30px; text-align: center;"> "Välkommen @Model.Item2.UserName"</p>
                         <p class="hidden-sm hidden-lg hidden-md hidden-sm" id="1345" style="font-family: Candara; font-style: oblique; color: forestgreen; font-size: 16px; text-align: center;"> "Välkommen @Model.Item2.UserName"</p>
@@ -43,7 +43,7 @@
                     {
                         <p class="hidden-xs" id="1345" style="font-family: Candara; font-style: oblique; color: forestgreen; font-size: 30px; text-align: center;"> "Enda kontorsbutiken med batonger"</p>
                         <p class="hidden-sm hidden-lg hidden-md hidden-sm" id="1345" style="font-family: Candara; font-style: oblique; color: forestgreen; font-size: 16px; text-align: center;"> "Enda kontorsbutiken med batonger"</p>
-                    }
+                    }*@
                 </div>
             </div>
             <div id="row2" class="row">
@@ -92,7 +92,7 @@
                                     <li><a href="#"><input type="text" name="FirstName" placeholder="Ange sökordet" style="width: 100px"> <span class="glyphicon glyphicon-search"></span> Sök</a></li>
                                 </ul>
                                 <ul class="nav navbar-nav navbar-right">
-                                    @Html.Partial("LogInNavBar")
+                                  
                                 </ul>
                             </div>
                         </nav>
@@ -100,7 +100,7 @@
                 </div>
                 <!-- #endregion -->
             </div>
-            @if (Model != null && Model.Item2 != null)
+            @*@if (Model != null && Model.Item2 != null)
             {
             <!-- #region Admin Navbar -->
                 <div id="rowAdmin" class="row">
@@ -129,7 +129,7 @@
                     </div>
                 </div>
             <!-- #endregion -->
-            }
+            }*@
 
         </div>
         <div id="row3" class="row">
