--- a/KickAss2/src/KickAss2/Views/Home/MyPage.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/MyPage.cshtml
@@ -20,7 +20,9 @@
 
     <div id="verticalLines" class="col-sm-4">
         <h4 style="text-align: left; font-weight: bold">Orderhistorik</h4>
-        <p style="text-align: left"><a href="/Order/OrderHistory">Visa en lista över dina order</a></p>
+        <form asp-controller="User" asp-action="CheckOrderHistory">
+            <p style="text-align: left"><a href="/Order/OrderHistory">Visa en lista över dina order</a></p>
+        </form>
     </div>
 
     <div class="col-sm-4">
