--- a/KickAss2/src/KickAss2/Views/Order/OrderHistory.cshtml
+++ b/KickAss2/src/KickAss2/Views/Order/OrderHistory.cshtml
@@ -17,31 +17,19 @@
                 <th style="text-align: left">Order ID</th>
                 <th style="text-align: left">Summa</th>
             </tr>
-
-            @*
-                Här ska loopen fixas för att lista upp all orderhistorik för användaren..... två hårdkodade exempel nu...
-
-                    @foreach (var item in Model)
+            @if (Model != null)
+            {
+                @foreach (var item in Model)
                 {
                     <tr>
-                        <td style="text-align: left">@item.OrderDate.ToString("yyyy-MM-dd hh:mm")</td>
+                        <td style="text-align: left">@item.OrderDate</td>
                         <td style="text-align: left">@item.OrderId</td>
                         <td style="text-align: left">@item.TotalPrice</td>
                     </tr>
                 }
-            *@
-
-            <tr>
-                <td style="text-align: left">2015-11-10 15:13</td>
-                <td style="text-align: left"><a href="~/Shared/OrderDetails/atitem.OrderId">1345698</a></td>
-                <td style="text-align: left">ca 70 mill</td>
-            </tr>
-            <tr>
-                <td style="text-align: left">29 maj 2015</td>
-                <td style="text-align: left"><a href="~/Shared/OrderDetails/atitem.OrderId">1871121</a></td>
-                <td style="text-align: left">250KSEK</td>
-            </tr>
+            }
         </table>
+
     </div>
 
     <div class="col-sm-4">
@@ -54,4 +42,3 @@
         <p style="text-align: left"><a href="#categoriIdPennor"></a></p>
     </div>
 </div>
-
