--- a/KickAss2/src/KickAss2/Views/Shared/AdminNavBar.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/AdminNavBar.cshtml
@@ -17,7 +17,7 @@
                     </div>
                     <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
-                            <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Lägg till produkt</a></li>
+                            <li><a href="/Products/Create"><span class="glyphicon glyphicon-plus"></span> Lägg till produkt</a></li>
                             <li><a href="#"><span class="glyphicon glyphicon-list-alt"></span> Hantera ordrar</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
