--- a/KickAss2/src/KickAss2/wwwroot/CSS/KickAss.css
+++ b/KickAss2/src/KickAss2/wwwroot/CSS/KickAss.css
@@ -5,7 +5,7 @@
     border-right-color: #d7d7d7;
 }
 
-.row{
+.row {
     padding: 5px;
 }
 
@@ -17,46 +17,49 @@
     color: #000000;
 }
 
-a:hover {
-    color: forestgreen;
-}
 
-h1{
+/*a#greenLinkHover > a:hover {
+    color: forestgreen;
+}*/
+
+
+
+h1 {
     text-align: left;
     font-family: Calibri;
     font-size: 42px;
 }
 
-.fatLabel{
-        font-family: Calibri;
-    text-align: left;
-    font-size: 16px;
-    text-align: right; 
-    font-weight: bold;
-}
-
-.greenHeadding{
-        text-align: left;
-    font-family: Calibri;
-    text-align: left; 
-    font-weight: bold; 
-    font-size: 24px; 
-    color: forestgreen
-}
-
-.smallBoldHeadding{
+.fatLabel {
     font-family: Calibri;
     text-align: left;
     font-size: 16px;
-    text-align: left; 
+    text-align: right;
     font-weight: bold;
 }
 
-.paragrapgText{
-        font-family: Georgia;
+.greenHeadding {
+    text-align: left;
+    font-family: Calibri;
+    text-align: left;
+    font-weight: bold;
+    font-size: 24px;
+    color: forestgreen;
+}
+
+.smallBoldHeadding {
+    font-family: Calibri;
+    text-align: left;
+    font-size: 16px;
+    text-align: left;
+    font-weight: bold;
+}
+
+.paragrapgText {
+    font-family: Georgia;
     text-align: left;
     font-size: 12px;
-    text-align: left; 
+    text-align: left;
     font-weight: lighter;
 }
 
@@ -64,4 +67,3 @@ h1{
     width: 100%;
     height: 100%;
 }
-
