--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@model CurrentUserVM
 
-@*@if (Model != null)
+@if (Model != null)
 {
     <div>
         Logged In as @Model.UserName
     </div>
-}*@
+}
+<div> @Html.Partial("LogInNavBar")</div>
 
 <script>
     //$(document).ready(function () {
@@ -54,7 +55,7 @@
         <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
         
-        @Html.Partial("AddAndDeleteButtons",Model)
+        @Html.Partial("AddAndDeleteButtons")
 
     </div>
     <div class="col-sm-4">
