--- a/KickAss2/src/KickAss2/Views/Order/ShoppingCart.cshtml
+++ b/KickAss2/src/KickAss2/Views/Order/ShoppingCart.cshtml
@@ -42,7 +42,7 @@
 <div class="container">
 	<ul class="nav nav-tabs col-lg-12">
 		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="active-tab" onclick="navigateTabs()"><b>1. Varukorg</b></a></li>
-		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="tabs" onclick="navigateTabs()"><b>2. Leveransadress</b></a></li>
+		<li class="col-xs-12 col-sm-12 col-md-3"><a href="/order/DeliveryAddress/" id="tabs" onclick="navigateTabs()"><b>2. Leveransadress</b></a></li>
 		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="tabs" onclick="navigateTabs()"><b>3. Betalning</b></a></li>
 		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="tabs" onclick="navigateTabs()"><b>4. Bekräftelse</b></a></li>
 	</ul>
@@ -85,5 +85,5 @@
 
 	</div>
 	<div class="col-sm-12" id="bot-bar"></div>
-	<a href="#" class="col-sm-2 col-sm-offset-1" id="active-tab" sonlick="forwardTabs()"><b>Gå vidare.</b></a><div class="col-sm-10"></div>
+	<a href="/DeliveryAddress/" class="col-sm-2 col-sm-offset-1" id="active-tab"><b>Gå vidare.</b></a><div class="col-sm-10"></div>
 </div>
