--- a/KickAss2/src/KickAss2/Views/Order/ShoppingCart.cshtml
+++ b/KickAss2/src/KickAss2/Views/Order/ShoppingCart.cshtml
@@ -42,8 +42,8 @@
 
 <div class="container">
 	<ul class="nav nav-tabs col-lg-12">
-		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="tabs" onclick="navigateTabs()"><b>1. Varukorg</b></a></li>
-		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="active-tab" onclick="navigateTabs()"><b>2. Leveransadress</b></a></li>
+		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="active-tab" onclick="navigateTabs()"><b>1. Varukorg</b></a></li>
+		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="tabs" onclick="navigateTabs()"><b>2. Leveransadress</b></a></li>
 		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="tabs" onclick="navigateTabs()"><b>3. Betalning</b></a></li>
 		<li class="col-xs-12 col-sm-12 col-md-3"><a href="#" id="tabs" onclick="navigateTabs()"><b>4. Bekräftelse</b></a></li>
 	</ul>
