--- a/KickAss2/src/KickAss2/Views/Home/MyPage.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/MyPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@using KickAss2.ViewModels
-@model List<OrderHistoryVM>
+@model CurrentUserVM
 <div> @Html.Partial("LogInNavBar")</div>
 
 <link href="~/css/kickass.css" rel="stylesheet" />
