--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -67,12 +67,15 @@
                                 <a class="navbar-brand" href="/home/index">Kick Ass Kontorsprylar</a>
                             </div>
                             <div class="collapse navbar-collapse" id="myNavbar">
+
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Produktkatalog<span class="caret"></span></a>
-											<ul class="dropdown-menu">
+										
+                                        <ul class="dropdown-menu">
 												<!--  #region categories -->
-												<li><b><a href="#" id="1">Almanackor</a></b></li>
+                                                
+												<li><b><a href="/products" id="1">Almanackor</a></b></li>
 												<li><b><a href="#" id="3">Block</a></b></li>
 												<li><b><a href="#" id="4">Förvaring</a></b></li>
 												<li><b><a href="#" id="5">Kuvert</a></b></li>
