--- a/KickAss2/src/KickAss2/Views/Products/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Products/Index.cshtml
@@ -12,21 +12,21 @@
     @foreach (var item in Model)
             {
         <div id="@item.ProducId" class="row">
-            @*<form  asp-controller="Products" asp-action="AddProductToCart">*@
+            <form  asp-controller="Products" asp-action="AddProductToCart">
                 >
                 <div class="col-sm-2">@item.Name</div>
                 <div class="col-sm-2">@item.Description</div>
                 <div class="col-sm-2">@item.Price</div>
 
                 <div class="col-sm-2"><input type="submit" id="@item.ProducId" value="+" class="btn btn-success" style="background-color: forestgreen" /></div>
-            @*</form>*@
+            </form>
 </div>    }
-    <script type="text/javascript">
+    @*<script type="text/javascript">
         $(".btn_btn-success").click(function () {
             var id = $(this).attr('id');
             $.post("/products/addproductstocart", { "id": id });
         });
-    </script>
+    </script>*@
 </div>
 
 
